--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MusicPlayer</string>
+    <string name="button_song2">Песня 2</string>
+    <string name="button_song1">Песня 1</string>
+    <string name="image_button_start_stop">Включить/выключить музыку</string>
 </resources>
